# mco-parking-status

./: Procfile  README.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js
backend/: .env.example  .gitignore  Dockerfile  app.py  db.py  env.py  log.py  pyproject.toml
backend/mco/: crud.py  data.py  enum.py  models.py  router.py
frontend/: Dockerfile  Dockerfile.local  nginx.conf  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: config.ts
frontend/src/routes/: +layout.svelte  +page.svelte  LocationList.svelte  ParkingStatus.svelte
src/: app.html
src/lib/: models.ts
src/routes/: +page.svelte  LocationList.svelte  ParkingStatus.svelte
src/routes/api/data/: +server.ts
