[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Casey Johnson <caseyjohnsonwv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
typing-inspect = "^0.9.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
